[tool.poetry]
name = "digitalocean-autorest"
version = "0.1.0"
description = ""
authors = ["Cesar Garza <scotch.neat@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
msrest = "^0.6.21"
azure-core = "^1.13.0"
azure-identity = "^1.5.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b2"
flake8 = "^3.9.1"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# Don't want to reformat generated code
exclude = [".venv", "generated"]