[tool.poetry]
name = "digitalocean"
version = "0.1.0"
description = "The official client for interacting with the DigitalOcean API"
authors = ["API Engineering <api-engineering@digitalocean.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7.2"
azure-core = ">=1.24.0"
azure-identity = ">=1.5.0"
isodate = ">=0.6.1"
msrest = ">=0.7.1"
typing-extensions = ">=3.7.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
responses = "^0.21.0"
PyPDF2 = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length=88 # matches black's default

[tool.pylint.messages_control]
disable = "no-name-in-module"