[tool.poetry]
name = "pydo"
version = "0.6.0"
description = "The official client for interacting with the DigitalOcean API"
authors = ["API Engineering <api-engineering@digitalocean.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/digitalocean/pydo"
documentation = "https://pydo.readthedocs.io/"
keywords = ["digitalocean", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8.0"
azure-core = ">=1.24.0"
azure-identity = ">=1.5.0"
isodate = ">=0.6.1"
msrest = ">=0.7.1"
typing-extensions = ">=3.7.4"
aiohttp = { version = ">=3.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
responses = "^0.21.0"
pytest-asyncio = "^0.19.0"
aioresponses = "^0.7.3"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length=88 # matches black's default

[tool.pylint.messages_control]
disable = "no-name-in-module"

[tool.pytest.ini_options]
markers = [
    "real_billing: Indicates the test requires a real billing account to test"
]

[tool.poetry.extras]
aio = ["aiohttp"]
