[project]
name = "digitalocean"
version = "0.1.0"
description = "The official client for interacting with the DigitalOcean API"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "API Engineering"},
    {email = "<api-engineering@digitalocean.com>"}
]

dependencies = [
    "azure-core>=1.24.0",
    "azure-identity>=1.5.0",
    "isodate>=0.6.1",
    "msrest>=0.7.1",
    "typing-extensions>=3.7.4"
]

[project.urls]
repository = "https://github.com/digitalocean/digitalocean-client-python"